--- a/plutus-scb/plutus-scb.cabal
+++ b/plutus-scb/plutus-scb.cabal
@@ -209,7 +209,9 @@ executable plutus-scb
         unliftio-core -any,
         uuid -any,
         yaml -any,
-        containers -any
+        containers -any,
+        contra-tracer -any,
+        iohk-monitoring -any
 
 executable plutus-game
     main-is: Main.hs
